classDiagram
    direction LR

    class IUserRepository {
        <<interface>>
        +findById(UUID) Optional~User~
        +findByEmail(String) Optional~User~
        +existsByEmail(String) boolean
        +save(User) User
        +findAll() List~User~
        +deleteById(UUID)
    }
    class UserRepositoryAdapter {
        -JpaUserRepo jpa
        +toDomain(UserEntity) User
        +toEntity(User) UserEntity
    }
    class InMemoryUserRepository {
        -Map~UUID·User~ store
    }
    class JpaUserRepo {
        <<interface>>
    }
    class JpaRepository {
        <<interface>>
    }

    IUserRepository <|.. UserRepositoryAdapter : Adapter Pattern
    IUserRepository <|.. InMemoryUserRepository : Unit Testing
    UserRepositoryAdapter --> JpaUserRepo : delegates
    JpaUserRepo --|> JpaRepository : extends
